--- a/style.css
+++ b/style.css
@@ -28,3 +28,18 @@
     margin-top: 200px;
 }
 
+.content {
+    padding: 5%;
+    margin-bottom: 50px;
+
+}
+
+.btn {
+    margin-left: 80px;
+    padding: 10px 20px;
+    margin-top: 20px;
+}
+
+.third {
+    margin-top: 100px;
+}
